2nd endpoint - basic list of files in given castle directory